[gd_scene load_steps=28 format=2]

[ext_resource path="res://Stand-Alone Textures/Orb Menu/Orb Menu.png" type="Texture" id=1]
[ext_resource path="res://Animation Textures/Button 1.png" type="Texture" id=2]
[ext_resource path="res://Orb Menu.gd" type="Script" id=3]
[ext_resource path="res://Stand-Alone Textures/Orb Menu/Earth orb.png" type="Texture" id=4]
[ext_resource path="res://Stand-Alone Textures/Orb Menu/Move orb.png" type="Texture" id=5]
[ext_resource path="res://Stand-Alone Textures/Orb Menu/Extra movement orb.png" type="Texture" id=6]
[ext_resource path="res://Stand-Alone Textures/Orb Menu/Fire orb.png" type="Texture" id=7]
[ext_resource path="res://Button1.gd" type="Script" id=8]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 38, 54 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 38, 0, 38, 54 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 76, 0, 38, 54 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 114, 0, 38, 54 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 152, 0, 38, 54 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 190, 0, 38, 54 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 228, 0, 38, 54 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 2 )
region = Rect2( 266, 0, 38, 54 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 2 )
region = Rect2( 304, 0, 38, 54 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 2 )
region = Rect2( 342, 0, 38, 54 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 2 )
region = Rect2( 380, 0, 38, 54 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 2 )
region = Rect2( 418, 0, 38, 54 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 2 )
region = Rect2( 456, 0, 38, 54 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 2 )
region = Rect2( 494, 0, 38, 54 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 2 )
region = Rect2( 532, 0, 38, 54 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 2 )
region = Rect2( 570, 0, 38, 54 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 2 )
region = Rect2( 608, 0, 38, 54 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 2 )
region = Rect2( 646, 0, 38, 54 )

[sub_resource type="SpriteFrames" id=19]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[node name="Orb Menu" type="Container"]
margin_left = -45.0
margin_top = -45.0
margin_right = -5.00002
margin_bottom = -5.00004
rect_scale = Vector2( 6, 6 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
show_behind_parent = true
position = Vector2( 9, 9 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Button1" type="Button" parent="."]
margin_left = -1.9
margin_top = -6.3
margin_right = 10.1
margin_bottom = 13.7
disabled = true
flat = true
script = ExtResource( 8 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Button1"]
position = Vector2( 5.75, 6.75 )
scale = Vector2( 0.25, 0.25 )
frames = SubResource( 19 )
frame = 1
playing = true
__meta__ = {
"_edit_lock_": true
}

[node name="Button1A" type="Area2D" parent="Button1"]
position = Vector2( -1.82245, -0.71789 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Button1/Button1A"]
build_mode = 1
polygon = PoolVector2Array( 2.86397, 4.68259, 12.2997, 14.2586, 12.2997, 0.753974, 8.05535, 1.70105, 4.89843, 2.89367 )

[node name="TextureButton2" type="TextureButton" parent="."]
margin_left = 320.638
margin_top = 221.749
margin_right = 360.638
margin_bottom = 261.749
texture_normal = ExtResource( 6 )

[node name="TextureButton3" type="TextureButton" parent="."]
margin_left = 320.638
margin_top = 221.749
margin_right = 360.638
margin_bottom = 261.749
texture_normal = ExtResource( 7 )

[node name="TextureButton4" type="TextureButton" parent="."]
margin_left = 320.638
margin_top = 221.749
margin_right = 360.638
margin_bottom = 261.749
texture_normal = ExtResource( 5 )

[node name="TextureButton5" type="TextureButton" parent="."]
margin_left = 320.638
margin_top = 221.749
margin_right = 360.638
margin_bottom = 261.749
texture_normal = ExtResource( 4 )

[node name="TextureButton6" type="TextureButton" parent="."]
margin_left = 320.638
margin_top = 221.749
margin_right = 360.638
margin_bottom = 261.749
texture_normal = ExtResource( 6 )

[node name="TextureButton7" type="TextureButton" parent="."]
margin_left = 320.638
margin_top = 221.749
margin_right = 360.638
margin_bottom = 261.749
texture_normal = ExtResource( 7 )

[node name="TextureButton8" type="TextureButton" parent="."]
margin_left = 320.638
margin_top = 221.749
margin_right = 360.638
margin_bottom = 261.749
texture_normal = ExtResource( 5 )
[connection signal="pressed" from="Button1" to="Button1" method="_on_Button1_pressed"]
[connection signal="mouse_entered" from="Button1/Button1A" to="Button1" method="_on_Button1A_mouse_entered"]
[connection signal="mouse_exited" from="Button1/Button1A" to="Button1" method="_on_Button1A_mouse_exited"]
